--- a/packages/client/src/styles/_normalize.scss
+++ b/packages/client/src/styles/_normalize.scss
@@ -53,7 +53,8 @@ hr {
  */
 
 pre {
-  font-family: 'system-ui', 'ALSHauss', monospace, monospace; /* 1 */
+  font-family: 'system-ui', 'ALSHauss', monospace,
+    monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -86,7 +87,8 @@ abbr[title] {
 code,
 kbd,
 samp {
-  font-family: 'system-ui', 'ALSHauss', monospace, monospace; /* 1 */
+  font-family: 'system-ui', 'ALSHauss', monospace,
+    monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
