--- a/packages/client/src/styles/_globals.scss
+++ b/packages/client/src/styles/_globals.scss
@@ -19,6 +19,8 @@ body {
   height: 100%;
   margin: 0 auto;
   overflow: auto;
+  font-family: 'Roboto', system-ui, sans-serif; 
+  font-family: 'Roboto-Italic'; 
 }
 
 #root {
