--- a/packages/client/src/styles/index.scss
+++ b/packages/client/src/styles/index.scss
@@ -1,6 +1,7 @@
 @use './_variables.scss' as *;
 @use './_colors.scss' as *;
 @use './_mixins.scss' as *;
+@use './_fonts.scss' as *;
 
 @forward './normalize';
 @forward './globals';
