MID-27 add variable font

--- a/packages/client/src/styles/_fonts.scss
+++ b/packages/client/src/styles/_fonts.scss
@@ -1,133 +1,25 @@
-// Bold
 @font-face {
-  font-family: 'ALSHauss';
+  font-family: Roboto;
+  src:
+    local("Roboto"),
+    url("/fonts/Roboto-VariableFont_wdth,wght.ttf") format("truetype supports variations"),
+    url("/fonts/Roboto-VariableFont_wdth,wght.ttf") format("truetype-variations"),
+    url("/fonts/Roboto-VariableFont_wdth,wght.ttf") format("truetype") tech('variations'),
+    url("/fonts/Roboto-VariableFont_wdth,wght.ttf") format("truetype");
   font-display: swap;
-  src: url('../../public/fonts/ALSHauss-Bold.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-Bold.ttf') format('ttf');
-  // eslint-disable-next-line @conarti/feature-sliced/absolute-relative
-  font-weight: 700;
-  font-style: normal;
+  font-weight: 100 900;
+  font-stretch: 75% 125%;
 }
 
 @font-face {
-  font-family: 'ALSHauss';
+  font-family: 'Roboto-Italic';
+  src:
+    local("Roboto-Italic"),
+    url("/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf") format("truetype supports variations"),
+    url("/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf") format("truetype-variations"),
+    url("/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf") format("truetype") tech('variations'),
+    url("/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf") format("truetype");
   font-display: swap;
-  src: url('../../public/fonts/ALSHauss-BoldItalic.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-BoldItalic.ttf') format('ttf');
-  font-weight: 700;
-  font-style: italic;
-}
-
-// Medium
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-Medium.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-Medium.ttf') format('ttf');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-MediumItalic.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-MediumItalic.ttf') format('ttf');
-  font-weight: 500;
-  font-style: italic;
-}
-
-// Regular
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-Regular.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-Regular.ttf') format('ttf');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-RegularItalic.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-RegularItalic.ttf') format('ttf');
-  font-weight: 400;
-  font-style: italic;
-}
-
-// Light
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-Light.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-Light.ttf') format('ttf');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-LightItalic.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-LightItalic.ttf') format('ttf');
-  font-weight: 300;
-  font-style: italic;
-}
-
-// Thin
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-Thin.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-Thin.ttf') format('ttf');
-  font-weight: 200;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('/public/fonts/ALSHauss-ThinItalic.woff') format('woff'),
-    url('/public/fonts/ALSHauss-ThinItalic.ttf') format('ttf');
-  font-weight: 200;
-  font-style: italic;
-}
-
-// Hairline
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-Hairline.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-Hairline.ttf') format('ttf');
-  font-weight: 100;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-HairlineItalic.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-HairlineItalic.ttf') format('ttf');
-  font-weight: 100;
-  font-style: italic;
-}
-
-// Black
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-Black.ttf') format('woff'),
-    url('../../public/fonts/ALSHauss-Black.ttf') format('ttf');
-  font-weight: 900;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'ALSHauss';
-  font-display: swap;
-  src: url('../../public/fonts/ALSHauss-BlackItalic.woff') format('woff'),
-    url('../../public/fonts/ALSHauss-BlackItalic.ttf') format('ttf');
-  font-weight: 900;
-  font-style: italic;
+  font-weight: 100 900;
+  font-stretch: 75% 125%;
 }
