mid-27 add profile components

--- a/packages/client/src/styles/index.scss
+++ b/packages/client/src/styles/index.scss
@@ -3,5 +3,5 @@
 @use './_mixins.scss' as *;
 @use './_fonts.scss' as *;
 
-@forward './normalize';
-@forward './globals';
+@forward './_normalize';
+@forward './_globals';
