--- a/packages/client/src/styles/_colors.scss
+++ b/packages/client/src/styles/_colors.scss
@@ -11,7 +11,7 @@
   /* Текст и фон */
   --ant-text-color: rgba(0, 0, 0, 0.9);
   --ant-dark-text-color: #141414; /* Для текста на светлых элементах в dark mode */
-  --ant-bg-container: #fafafa;
+  --ant-bg-container: rgb(250 250 250 / 0.7);
   --ant-border-color: #d9d9d9;
 
   --game-primary-bg: #d2f2ff;
@@ -29,7 +29,7 @@
 
   /* Текст и фон */
   --ant-text-color: rgba(255, 255, 255, 0.92);
-  --ant-bg-container: #1a1a1a;
+  --ant-bg-container: rgb(26 26 26 / 0.7);
   --ant-border-color: #444;
 
   --game-primary-bg: #123540;
