--- a/packages/client/src/styles/_normalize.scss
+++ b/packages/client/src/styles/_normalize.scss
@@ -182,3 +182,14 @@ details {
 summary {
   display: list-item;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  margin-inline: 0;
+  margin-block: 0;
+}
