mid-27 add profile components

--- a/packages/client/src/styles/_colors.scss
+++ b/packages/client/src/styles/_colors.scss
@@ -29,7 +29,7 @@
   
   /* Текст и фон */
   --ant-text-color: rgba(255, 255, 255, 0.92);
-  --ant-bg-container: #1A1A1A;
+  --ant-bg-container: rgb(26 26 26 / 0.7);
   --ant-border-color: #444;
 
   --game-primary-bg: #123540;
