--- a/packages/client/src/styles/_colors.scss
+++ b/packages/client/src/styles/_colors.scss
@@ -15,6 +15,8 @@
   --ant-border-color: #d9d9d9;
 
   --game-primary-bg: #d2f2ff;
+
+  --ant-placeholder-color: rgba(0, 0, 0, 0.25);
 }
 
 [data-theme='dark'] {
@@ -33,4 +35,6 @@
   --ant-border-color: #444;
 
   --game-primary-bg: #123540;
+
+  --ant-placeholder-color: rgba(255, 255, 255, 0.3);
 }
