--- a/packages/client/src/features/game/containers/apple-worn-game/apple-worn-game.scss
+++ b/packages/client/src/features/game/containers/apple-worn-game/apple-worn-game.scss
@@ -6,8 +6,9 @@
 .aw-game-board {
   position: relative;
   background-color: #fff;
-  border: 2px solid #333;
+  border: 1px dashed rgb(51 51 51 / 20%);
   margin: 20px auto;
+  background-color: transparent;
 }
 
 .aw-cell {
@@ -62,6 +63,7 @@
   font-size: 1.2em;
   display: flex;
   justify-content: space-around;
+  border: 1px solid #ccc;
 }
 
 .aw-game-overlay {
