--- a/packages/client/src/pages/game-page/game-page/game-page.scss
+++ b/packages/client/src/pages/game-page/game-page/game-page.scss
@@ -1,10 +1,10 @@
 .game-page-container {
-  background-image: url('/background.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-image: url('/fones/background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: safe center;
 }
