--- a/packages/client/src/features/game/containers/apple-worn-game/apple-worn-game.scss
+++ b/packages/client/src/features/game/containers/apple-worn-game/apple-worn-game.scss
@@ -1,6 +1,8 @@
 .aw-game-container {
-  text-align: center;
-  font-family: Arial, sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px 20px;
 }
 
 .aw-game-board {
@@ -11,56 +13,8 @@
   background-color: transparent;
 }
 
-.aw-cell {
-  position: absolute;
-  box-sizing: border-box;
-}
-
-.aw-snake {
-  background-color: #4CAF50;
-  border: 1px solid #45a049;
-}
-
-.aw-head {
-  background-color: #2E7D32;
-  border-radius: 20%;
-}
-
-.aw-apple {
-  background-color: #f44336;
-  border-radius: 50%;
-  border: 1px solid #d32f2f;
-}
-
-.aw-wall {
-  background-color: #795548;
-  border: 1px solid #5D4037;
-}
-
-.aw-exit {
-  background-color: #FFC107;
-  border: 1px solid #FFA000;
-  border-radius: 50%;
-  animation: aw-pulse 1.5s infinite;
-}
-
-@keyframes aw-pulse {
-  0% {
-    transform: scale(0.95);
-  }
-
-  50% {
-    transform: scale(1.05);
-  }
-
-  100% {
-    transform: scale(0.95);
-  }
-}
-
 .aw-game-info {
   margin-bottom: 10px;
-  font-size: 1.2em;
   display: flex;
   justify-content: space-around;
   border: 1px solid #ccc;
@@ -83,42 +37,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
-}
 
-.aw-controls .aw-control-btn {
-  width: 60px;
-  height: 60px;
-  font-size: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.aw-control-btn:active {
-  background-color: #0b7dda;
+  & &__btn {
+    width: 60px;
+    height: 60px;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .aw-controls>div {
   display: flex;
-}
-
-.aw-restart-btn,
-.aw-next-level-btn {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 10px 2px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.aw-restart-btn:active,
-.aw-next-level-btn:active {
-  background-color: #45a049;
 }
