MID-30 remove game loop rendering

--- a/packages/client/src/game/containers/apple-worm-game/apple-worm-game.scss
+++ b/packages/client/src/game/containers/apple-worm-game/apple-worm-game.scss
@@ -13,15 +13,8 @@
   background-color: transparent;
 }
 
-.aw-game-info {
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: space-around;
-  border: 1px solid #ccc;
-}
-
 .aw-game-overlay {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
