--- a/packages/client/src/game/ui/game-board/game-board.scss
+++ b/packages/client/src/game/ui/game-board/game-board.scss
@@ -3,3 +3,10 @@
   letter-spacing: 1px;
   color: #00000073;
 }
+
+.aw-game-info {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid #ccc;
+}
