MID-30 add backgroud mixin

--- a/packages/client/src/styles/_mixins.scss
+++ b/packages/client/src/styles/_mixins.scss
@@ -35,3 +35,10 @@
         @content;
     }
 }
+
+@mixin main-background {
+  background-image: url('/fones/background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
