add game ebgine description

--- a/packages/client/src/styles/_colors.scss
+++ b/packages/client/src/styles/_colors.scss
@@ -14,6 +14,8 @@
   --ant-bg-container: rgb(250 250 250 / 0.7);
   --ant-border-color: #d9d9d9;
 
+  --ant-menu-item-selected-color: #d107fe;
+
   --game-primary-bg: #d2f2ff;
 
   --ant-placeholder-color: rgba(0, 0, 0, 0.25);
@@ -24,7 +26,7 @@
   --ant-primary-color: #e69500;
   --ant-primary-color-hover: #ffa500;
   --ant-primary-color-active: #cc8400;
-  --ant-primary-bg: #2b2111;
+  --ant-primary-bg: #494948;
   --ant-primary-color-text: #000000;
 
   --ant-secondary-color-text: #ffffff73;
@@ -33,6 +35,8 @@
   --ant-text-color: rgba(255, 255, 255, 0.92);
   --ant-bg-container: rgb(26 26 26 / 0.7);
   --ant-border-color: #444;
+
+  --ant-menu-item-selected-color: #07f7f3;
 
   --game-primary-bg: #123540;
 
